[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://knight.png" type="Texture" id=2]
[ext_resource path="res://Ruler.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
absorbent = true

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="SphereMesh" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="SphereMesh" id=5]

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( -24.0228, -36.0129, -26.8627, -1.92283, -21.2166, 9.7274, 7.96234, 9.74444, 13.796, -3.51382, 10.0837, -35.864, 4.78036, -44.7028, 3.18937, -37.6317, -6.35657, -41.5208, -16.2561, -38.6924, -19.2613, -46.6473 )

[node name="player_rigidbody" type="RigidBody2D"]
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 20.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="player_CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="player_CollisionShape2D"]
visible = false
scale = Vector2( 10, 10 )
mesh = SubResource( 3 )

[node name="roll_stopper_collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
disabled = true

[node name="trajectory_1" type="MeshInstance2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 7, 7 )
z_index = 4096
mesh = SubResource( 5 )

[node name="trajectory_2" type="MeshInstance2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 6, 6 )
z_index = 4096
mesh = SubResource( 5 )

[node name="trajectory_3" type="MeshInstance2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 5, 5 )
z_index = 4096
mesh = SubResource( 5 )

[node name="trajectory_4" type="MeshInstance2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 4, 4 )
z_index = 4096
mesh = SubResource( 5 )

[node name="trajectory_5" type="MeshInstance2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 3, 3 )
z_index = 4096
mesh = SubResource( 5 )

[node name="trajectory_6" type="MeshInstance2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 2, 2 )
z_index = 4096
mesh = SubResource( 5 )

[node name="Area2D_bottom_of_player" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D_bottom_of_player"]
scale = Vector2( 0.75, 0.5 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_bottom_of_player"]
position = Vector2( 0, 10 )
scale = Vector2( 0.1, 0.75 )
shape = SubResource( 7 )

[node name="knight" type="Sprite" parent="."]
position = Vector2( 0, -18 )
z_index = 4095
z_as_relative = false
texture = ExtResource( 2 )

[node name="lightblock" type="LightOccluder2D" parent="."]
occluder = SubResource( 8 )

[node name="ruler_fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_player_rigidbody_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_player_rigidbody_body_exited"]
[connection signal="area_entered" from="Area2D_bottom_of_player" to="." method="_on_Area2D_bottom_of_player_area_entered"]
[connection signal="area_exited" from="Area2D_bottom_of_player" to="." method="_on_Area2D_bottom_of_player_area_exited"]
[connection signal="body_entered" from="Area2D_bottom_of_player" to="." method="_on_Area2D_bottom_of_plauer_body_entered"]
[connection signal="body_exited" from="Area2D_bottom_of_player" to="." method="_on_Area2D_bottom_of_plauer_body_exited"]
